Fixed spacing and updated images

--- a/youschef/src/components/Recipe/Recipe.css
+++ b/youschef/src/components/Recipe/Recipe.css
@@ -3,44 +3,28 @@
   width: 100%;
 }
 
-.singleRecipeContainer1 {
+.singleRecipeContainer {
   /* border: 1px solid black; */
   position: relative;
   height: 230px;
   width: 345px;
   margin: 0 auto 17px auto;
   border-radius: 16px;
+  background-position: cover;
+  background-repeat: no-repeat;
+  background-size: auto;
+  box-shadow: 2px 4px 25px rgba(0, 0, 0, .2);
+}
+.caesar {
   background-image: url('https://res.cloudinary.com/darrin-im/image/upload/v1569277230/CaesarSaladSmall_hnuz49.jpg');
-  background-position: cover;
-  background-repeat: no-repeat;
-  background-size: auto;
-  box-shadow: 2px 4px 25px rgba(0, 0, 0, .2);
 }
-.singleRecipeContainer2 {
-  /* border: 1px solid black; */
-  position: relative;
-  height: 230px;
-  width: 345px;
-  margin: 0 auto 17px auto;
-  border-radius: 16px;
-  background-image: url('https://files.slack.com/files-pri/T0351JZQ0-FNRG6EQ6A/parm_small.png');
-  background-position: cover;
-  background-repeat: no-repeat;
-  background-size: auto;
-  box-shadow: 2px 4px 25px rgba(0, 0, 0, .2);
+
+.chana {
+  background-image: url('https://i.imgur.com/3dud5Pm.png');
 }
-.singleRecipeContainer3 {
-  /* border: 1px solid black; */
-  position: relative;
-  height: 230px;
-  width: 345px;
-  margin: 0 auto 17px auto;
-  border-radius: 16px;
-  background-image: url('https://files.slack.com/files-pri/T0351JZQ0-FNNRTQZJQ/chann_small.png');
-  background-position: cover;
-  background-repeat: no-repeat;
-  background-size: auto;
-  box-shadow: 2px 4px 25px rgba(0, 0, 0, .2);
+
+.parm {
+  background-image: url('https://i.imgur.com/LMoRELG.png');
 }
 
 .recipeNameContainer {
